# super-intelligence

./: .env.example  .gitignore  PAPER.html  PAPER.md  PAPER_public.html  PLAN.md  README.md  pyproject.toml  start.sh
brain/: CONSTITUTION.md  __init__.py  brain_session.py  brainstem.py  bus.py  cell.py  dmn.py  dmn_prompts.py  emotion_hierarchy.py  emotion_presets.py  emotion_vocabulary.py  hebbian.py  metacognition.py  model_router.py  neuron.py  pns.py  predictor.py  run.py  security.py  session_loops.py  session_setup.py  session_turn.py  settings.json  settings.py  skill_loader.py  sleep.py  sleep_prompts.py  streaming_mic.py  utils.py  voice_bridge.py  wiring.py  wiring_bootstrap.py
eval/: EVAL_HANDOFF.md  analyze_latency.py  baseline.py  compare.py  emotion_judge.py  identity_judge.py  langfuse_audit.py  langfuse_batch_eval.py  langfuse_judge.py  learning_judge.py  learning_monitor.py  paper_update_log.md  report.py  scorer.py  skill_judge.py  turn_logger.py  turns.jsonl
figures/: architecture.html
second_brain/: deferred_thoughts.md  dmn_novelty.json  task_queue.json  wiring.json
tests/: conftest.py  test_audio_dsp.py  test_auditory_cortex.py  test_cluster_modulation.py  test_decisions_log.py  test_dmn_anticipator.py  test_dmn_dedup.py  test_dmn_feedback.py  test_dmn_neuromod_coupling.py  test_dmn_prefetcher.py  test_dmn_resilience.py  test_dmn_temporal_prediction.py  test_emotion_expression.py  test_eval_blinding.py  test_follow_through.py  test_frontal_capabilities.py  test_gating_shadow.py  test_hebbian_pass.py  test_hippocampus_idle_thought.py  test_hormonal_system.py  test_job_resume.py  test_learning_monitor.py  test_lobe_bridge.py  test_motor_cortex.py  test_neuromod_midturn.py  test_new_features.py  test_observability_timeline.py  test_personality_and_affect.py  test_predictor_gating.py  test_regression.py  test_skill_selector.py  test_startup_and_consolidation.py  test_streaming_mic_mute.py  (+7 more)
(+465 files in other folders)
