[project]
name = "super-intelligence"
version = "0.1.0"
description = "Biologically-inspired multi-agent brain"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "lancedb>=0.15.0",
    "langfuse>=2.0.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=1.0.0",
    "sounddevice>=0.5.0",
    "fastapi>=0.110.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain"]

[project.scripts]
brain = "brain.run:main"
