[project]
name = "super-intelligence"
version = "0.1.0"
description = "Biologically-inspired multi-agent brain"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "lancedb>=0.15.0",
    "langfuse>=2.0.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=1.0.0",
    "sounddevice>=0.5.0",
    "fastapi>=0.110.0",
    "httpx>=0.27",
    "scipy>=1.12.0",
    "librosa>=0.10.0",
    "speechbrain>=1.0.0",
    "torchaudio>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain"]

[project.scripts]
brain = "brain.run:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["brain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
